[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="main" type="Node"]
script = ExtResource( 1 )
MAX_MESSAGES = 100

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_button_list" type="HBoxContainer" parent="ui/VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0

[node name="pressme_button" type="Button" parent="ui/VBoxContainer/top_button_list"]
margin_right = 75.0
margin_bottom = 24.0
text = "PRESS ME"

[node name="PanelContainer" type="PanelContainer" parent="ui/VBoxContainer"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 529.0
custom_styles/panel = SubResource( 1 )

[node name="scroll_container" type="ScrollContainer" parent="ui/VBoxContainer/PanelContainer"]
margin_right = 400.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="messages_list" type="VBoxContainer" parent="ui/VBoxContainer/PanelContainer/scroll_container"]
margin_right = 400.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ui/VBoxContainer"]
margin_top = 534.0
margin_right = 400.0
margin_bottom = 564.0
custom_constants/separation = 0

[node name="autoscroll_checkbox" type="CheckBox" parent="ui/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="ui/VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 27.0
text = "Auto-scroll"

[node name="Control" type="Control" parent="ui/VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 353.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="clear_button" type="Button" parent="ui/VBoxContainer/HBoxContainer"]
margin_left = 353.0
margin_right = 400.0
margin_bottom = 30.0
text = "Clear"
[connection signal="pressed" from="ui/VBoxContainer/top_button_list/pressme_button" to="." method="_on_pressme_button_pressed"]
[connection signal="toggled" from="ui/VBoxContainer/HBoxContainer/autoscroll_checkbox" to="." method="_on_autoscroll_checkbox_toggled"]
[connection signal="pressed" from="ui/VBoxContainer/HBoxContainer/clear_button" to="." method="_on_clear_button_pressed"]
